--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,8 +26,17 @@ jobs:
       with:
         # Check for latest at link at .NET 5 download page (https://dotnet.microsoft.com/download/dotnet/5.0)
         dotnet-version: '5.0.401'
-    - run: dotnet build
-    #- run: dotnet test ${{ env.UT_PROJECT }}
+    
+    - name: Compile solution
+      run: dotnet build -c ${{ env.CONFIG }}
+
+    # Run code analysis for all projects/solutions, such that code analysis violations break the build.
+    - name: Run .NET Code Analysis
+      uses: dotnet/code-analysis@v1
+      id: code-analysis
+      with:
+        build-breaking: true
+
     - name: Run Unit Tests
       uses: b3b00/coverlet-action@1.1.3
       with:
