--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,12 +30,12 @@ jobs:
     - name: Compile solution
       run: dotnet build -c ${{ env.CONFIG }}
 
-    # Run code analysis for all projects/solutions, such that code analysis violations break the build.
-    - name: Run .NET Code Analysis
-      uses: dotnet/code-analysis@v1
-      id: code-analysis
-      with:
-        build-breaking: true
+    ## Run code analysis for all projects/solutions, such that code analysis violations break the build.
+    #- name: Run .NET Code Analysis
+    #  uses: dotnet/code-analysis@v1
+    #  id: code-analysis
+    #  with:
+    #    build-breaking: true
 
     - name: Run Unit Tests
       uses: b3b00/coverlet-action@1.1.3
