--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,7 +8,7 @@ on:
 env:
   SOLN_FILE: Saucery.sln                          # full path to your solution file
   UT_DIR: UnitTests
-  UT_PROJECT: ${{ env.UT_DIR }}/UnitTests.csproj  # full path to your unit test project file
+  UT_PROJECT: UnitTests/UnitTests.csproj          # full path to your unit test project file
   SAUCE_USER_NAME: ${{ secrets.SAUCE_USER_NAME }}
   SAUCE_API_KEY: ${{ secrets.SAUCE_API_KEY }}
   CONFIG: Release
