--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -52,7 +52,7 @@ jobs:
         output: ${{ env.COVERAGE_FILENAME }}
         outputFormat: ${{ env.COVERAGE_FORMAT }}
         threshold: ${{ env.COVERAGE_THRESHOLD }}
-        excludes: '[program]*,[UnitTests]Tests.*,[Merlin]*,[Saucery]Saucery.Selenium.*,[Saucery]Saucery.DataSources.*'
+        excludes: '[Program]*,[UnitTests]Tests.*,[Saucery]Saucery.Selenium.*,[Saucery]Saucery.Driver.SauceryAndroid*,[Saucery]Saucery.Driver.SauceryIOS*'
 
     - name: ReportGenerator
       uses: danielpalme/ReportGenerator-GitHub-Action@4.8.12
