--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -81,7 +81,7 @@ jobs:
       if: ${{ always() }}
 
     - name: Bump version and push tag
-      if: ${{ github.ref == 'ref/head/develop' && success() }}
+      if: ${{ github.ref == 'refs/heads/develop' && success() }}
       id: tag_version
       uses: mathieudutour/github-tag-action@v6.0
       with:
