--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -75,7 +75,7 @@ jobs:
       if: ${{ always() }}
 
     - name: Bump version and push tag
-      if: ${{ github.ref == 'refs/heads/develop' && success() }}
+      if: ${{ (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/master') && success() }}
       id: tag_version
       uses: mathieudutour/github-tag-action@v6.0
       with:
