--- a/Saucery/Saucery.nuspec
+++ b/Saucery/Saucery.nuspec
@@ -1,7 +1,7 @@
 ﻿<package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Saucery</id>
-    <version>4.0.0-rc</version>
+    <version>4.0.0</version>
     <title>Saucery</title>
     <authors>SauceForge</authors>
     <owners>Andrew Gray</owners>
@@ -9,12 +9,14 @@
     <releaseNotes>
       ChangeLog:
       v4.0.0
-      - Initial Release
+        - Initial Release
     </releaseNotes>
     <summary>Sourcery for SauceLabs - Unlocking SauceLabs capability</summary>
-    <projectUrl>https://github.com/Sauceforge/Saucery</projectUrl>
-    <PackageIconUrl>http://sauceforge.github.io/Images/SauceryNUnit3_New.png</PackageIconUrl>
-    <copyright>Copyright Andrew Gray 2014-2022</copyright>
+    <projectUrl>https://sauceforge.github.io</projectUrl>
+    <repository type="git" url="https://github.com/Sauceforge/Saucery.git"/>
+    <icon>images/SauceryNUnit.png</icon>
+	<license type="expression">GPL-3.0-or-later</license>
+    <copyright>Copyright (c) Andrew Gray 2014-2022</copyright>
     <tags>nunit saucelabs test testing tdd framework assert</tags>
     <!--<frameworkAssemblies>
       <frameworkAssembly assemblyName="System.Core" targetFramework="net452" />
@@ -22,7 +24,7 @@
     </frameworkAssemblies>-->
     <dependencies>
       <group targetFramework="net6.0">
-        <dependency id="Appium.WebDriver" version="5.0.0-beta01" />
+        <!--<dependency id="Appium.WebDriver" version="5.0.0-beta01" />-->
         <dependency id="Castle.Core" version="5.0.0" />
         <dependency id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" />
         <dependency id="Microsoft.NET.Test.Sdk" version="17.2.0" />
@@ -32,7 +34,6 @@
         <dependency id="Selenium.Support" version="4.1.1" />
         <dependency id="Selenium.WebDriver" version="4.1.1" />
       </group>
-      <!--<dependency id="Shouldly" version="4.0.3" />-->
       <!--<dependency id="NuGet.Core" version="2.14.0" />-->
     </dependencies>
   </metadata>
@@ -41,6 +42,7 @@
     <file src="bin\Release\net6.0\nunit.framework.dll" target="lib\net6.0\" /> <!--Got to do this to make it work-->
     <file src="bin\Release\net6.0\testhost.dll" target="lib\net6.0\" />
     <file src="bin\Release\net6.0\Microsoft.TestPlatform.PlatformAbstractions.dll" target="lib\net6.0\" />
+    <file src="Images\SauceryNUnit.png" target="images\" />
     <!--<file src="bin\Release\NuGet.Core.dll" target="lib\net452\" />--> <!--Got to do this to make it work-->
     <!--<file src="bin\Release\Microsoft.Web.XmlTransform.dll" target="lib\net452\" />--> <!--Got to do this to make it work-->
   </files>
