--- a/Saucery/Saucery.csproj
+++ b/Saucery/Saucery.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="RestSharp" Version="108.0.1" />
     <PackageReference Include="Selenium.Support" Version="4.2.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.2.0" />
+    <PackageReference Include="Shouldly" Version="4.0.3" />
     <None Include="Images\SauceryNUnit.png" Pack="true" PackagePath="\" />
   </ItemGroup>
 
