--- a/Saucery/Saucery.csproj
+++ b/Saucery/Saucery.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <PackageReference Include="NUnit" Version="3.13.3" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
     <None Include="Images\SauceryNUnit.png" Pack="true" PackagePath="\" />
   </ItemGroup>
 
