--- a/.github/workflows/publish-core.yml
+++ b/.github/workflows/publish-core.yml
@@ -23,7 +23,7 @@ jobs:
           PROJECT_FILE_PATH: Saucery.Core/Saucery.Core.csproj
           
           # NuGet package id, used for version detection & defaults to project name
-          # PACKAGE_NAME: Core
+          PACKAGE_NAME: Saucery.Core
           
           # Filepath with version info, relative to root of repository & defaults to PROJECT_FILE_PATH
           # VERSION_FILE_PATH: Directory.Build.props
@@ -41,10 +41,10 @@ jobs:
           # TAG_FORMAT: v*
 
           # API key to authenticate with NuGet server
-          # NUGET_KEY: ${{secrets.NUGET_API_KEY}}
+          NUGET_KEY: ${{secrets.NUGET_API_KEY}}
 
           # NuGet server uri hosting the packages, defaults to https://api.nuget.org
-          # NUGET_SOURCE: https://api.nuget.org
+          NUGET_SOURCE: https://api.nuget.org
 
           # Flag to toggle pushing symbols along with nuget package to the server, disabled by default
           # INCLUDE_SYMBOLS: false
