--- a/Saucery.Core/Saucery.Core.csproj
+++ b/Saucery.Core/Saucery.Core.csproj
@@ -8,21 +8,21 @@
 
 	<PropertyGroup>
 		<IsPackable>true</IsPackable>
-		<!--<PackageId>Saucery</PackageId>
-    <PackageVersion>4.0.0</PackageVersion>
-    <Authors>Andrew Gray</Authors>
-    <Company>SauceForge</Company>
-    <Copyright>Copyright Andrew Gray 2014-2022</Copyright>
-    <Description>Sourcery for SauceLabs - Unlocking SauceLabs capability</Description>
-    <PackageReleaseNotes>
-      ChangeLog:
-      v4.0.0
-      - Initial Release
-    </PackageReleaseNotes>
-    <PackageProjectUrl>https://github.com/Sauceforge/Saucery</PackageProjectUrl>
-    <PackageIconUrl>http://sauceforge.github.io/Images/SauceryNUnit3_New.png</PackageIconUrl>
-    <PackageIcon>SauceryNUnit.png</PackageIcon>
-    <PackageTags>nunit saucelabs test testing tdd framework assert</PackageTags>-->
+		<PackageId>Saucery.Core</PackageId>
+	    <PackageVersion>4.0.0</PackageVersion>
+	    <Authors>Andrew Gray</Authors>
+	    <Company>SauceForge</Company>
+	    <Copyright>Copyright Andrew Gray 2014-2023</Copyright>
+	    <Description>Sorcery for SauceLabs - Unlocking SauceLabs capability</Description>
+	    <PackageReleaseNotes>
+	      ChangeLog:
+	      v4.0.0
+	      - Initial Release
+	    </PackageReleaseNotes>
+	    <PackageProjectUrl>https://github.com/Sauceforge/Saucery</PackageProjectUrl>
+	    <PackageIconUrl>http://sauceforge.github.io/Images/SauceryNUnit3_New.png</PackageIconUrl>
+	    <PackageIcon>Images/Saucery.Core.png</PackageIcon>
+	    <PackageTags>nunit saucelabs test testing tdd framework assert</PackageTags>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -35,6 +35,12 @@
 		<PackageReference Include="Selenium.Support" Version="4.8.1" />
 		<PackageReference Include="Selenium.WebDriver" Version="4.8.1" />
 		<PackageReference Include="Shouldly" Version="4.1.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="Images\Saucery.Core.png">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
