--- a/Saucery/Saucery.csproj
+++ b/Saucery/Saucery.csproj
@@ -20,7 +20,7 @@
         - Initial Release
       </PackageReleaseNotes>
       <PackageProjectUrl>https://github.com/Sauceforge/Saucery</PackageProjectUrl>
-	  <PackageIcon>Saucery.NUnit.png</PackageIcon>
+	  <PackageIcon>Saucery.NUnit.128x128.png</PackageIcon>
       <PackageTags>nunit saucelabs test testing tdd framework assert</PackageTags>
 	  <Title>Sorcery for SauceLabs and NUnit</Title>
   </PropertyGroup>
@@ -28,7 +28,8 @@
   <ItemGroup>
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
-    <None Include="Images\Saucery.NUnit.png" Pack="true" PackagePath="\" />
+    <PackageReference Include="Saucery.Core" Version="4.0.0" />
+    <None Include="Images\Saucery.NUnit.128x128.png" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <ItemGroup>
