--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,13 @@
-name: publish saucery to nuget
+name: Publish Saucery to NuGet
 on: 
     workflow_dispatch:
+
+env:
+  PROJECT_NAME: Saucery
+  NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+  CONFIG: Release
+  NUPKG_DIR: out
+  NUGET_SOURCE: https://api.nuget.org/v3/index.json
 
 jobs:
   publish:
@@ -14,37 +21,7 @@ jobs:
       #   with:
       #     dotnet-version: 3.1.200
 
-      # Publish
-      - name: publish on version change
-        id: publish_nuget
-        uses: rohith/publish-nuget@v2
-        with:
-          # Filepath of the project to be packaged, relative to root of repository
-          PROJECT_FILE_PATH: Saucery/Saucery.csproj
-          
-          # NuGet package id, used for version detection & defaults to project name
-          PACKAGE_NAME: Saucery
-          
-          # Filepath with version info, relative to root of repository & defaults to PROJECT_FILE_PATH
-          # VERSION_FILE_PATH: Directory.Build.props
-
-          # Regex pattern to extract version info in a capturing group
-          # VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
-          
-          # Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
-          # VERSION_STATIC: 1.0.0
-
-          # Flag to toggle git tagging, enabled by default
-          # TAG_COMMIT: true
-
-          # Format of the git tag, [*] gets replaced with actual version
-          # TAG_FORMAT: v*
-
-          # API key to authenticate with NuGet server
-          NUGET_KEY: ${{secrets.NUGET_API_KEY}}
-
-          # NuGet server uri hosting the packages, defaults to https://api.nuget.org
-          NUGET_SOURCE: https://api.nuget.org
-
-          # Flag to toggle pushing symbols along with nuget package to the server, disabled by default
-          # INCLUDE_SYMBOLS: false
+      - name: Pack NuGet package
+        run: dotnet pack -c ${{ env.CONFIG }} ${{ env.PROJECT_NAME }}\${{ env.PROJECT_NAME }}.csproj -o ${{ env.NUPKG_DIR }}
+      - name: Push generated package to NuGet
+        run: dotnet nuget push ${{ env.NUPKG_DIR }}\*.nupkg -Source '${{ NUGET_SOURCE }}' --api-key ${{ env.NUGET_API_KEY }}
