--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,11 +32,11 @@ env:
   CONFIG: Release
   APP_PACKAGE_PATH: 'published'                                                                 # set this to the path to your web app project, defaults to the repository root
   COVERAGE_FORMAT: opencover
-  UNIT_COVERAGE_FILENAME: opencover.unit.xml
-  NUNIT_INTEGRATION_COVERAGE_FILENAME: opencover.nunit.integration.xml
-  XUNIT_INTEGRATION_COVERAGE_FILENAME: opencover.xunit.integration.xml
-  NUNIT_RD_INTEGRATION_COVERAGE_FILENAME: opencover.nunit.realdevice.integration.xml
-  XUNIT_RD_INTEGRATION_COVERAGE_FILENAME: opencover.xunit.realdevice.integration.xml
+  UNIT_COVERAGE_FILENAME: 'opencover.unit.xml'
+  NUNIT_INTEGRATION_COVERAGE_FILENAME: 'opencover.nunit.integration.xml'
+  XUNIT_INTEGRATION_COVERAGE_FILENAME: 'opencover.xunit.integration.xml'
+  NUNIT_RD_INTEGRATION_COVERAGE_FILENAME: 'opencover.nunit.realdevice.integration.xml'
+  XUNIT_RD_INTEGRATION_COVERAGE_FILENAME: 'opencover.xunit.realdevice.integration.xml'
   COVERAGE_THRESHOLD: 80
 
 jobs:
@@ -325,6 +325,9 @@ jobs:
       with:
         name: xunit-real-integration-test-results
     
+    - name: Present working directory
+      run: pwd
+
     - name: Display structure of downloaded files
       run: ls -R
 
@@ -334,7 +337,7 @@ jobs:
         reports: ${{ env.UNIT_COVERAGE_FILENAME }};
                  ${{ env.NUNIT_INTEGRATION_COVERAGE_FILENAME }};
                  ${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }};
-                 ${{ env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
+                 ${{ env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME }};
                  ${{ env.NUNIT_RD_INTEGRATION_COVERAGE_FILENAME }} # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
         #reports: '*.xml'
         targetdir: 'coveragereport' # REQUIRED # The directory where the generated report should be saved.
