--- a/ExternalMerlin.NUnit/ExternalMerlin.NUnit.csproj
+++ b/ExternalMerlin.NUnit/ExternalMerlin.NUnit.csproj
@@ -15,8 +15,8 @@
 	  <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
 	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />-->
     
-    <!--<PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />-->
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+    <!--<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />-->
     <PackageReference Include="Saucery" Version="4.5.1" />
   </ItemGroup>
 
