--- a/ExternalMerlin.XUnit/ExternalMerlin.XUnit.csproj
+++ b/ExternalMerlin.XUnit/ExternalMerlin.XUnit.csproj
@@ -11,14 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<!--<PackageReference Include="Meziantou.Xunit.ParallelTestFramework" Version="2.2.0" />
-	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
-	<PackageReference Include="xunit.runner.visualstudio" Version="2.8.1">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-	  <PrivateAssets>all</PrivateAssets>
-	</PackageReference>-->
-
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
+    <!--<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />-->
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.1">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -29,11 +22,5 @@
   <ItemGroup>
 	  <ProjectReference Include="..\Saucery.Tests.Common\Saucery.Tests.Common.csproj" />
   </ItemGroup>
-
-  <!--<ItemGroup>
-    <None Update="testhost.runtimeconfig.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>-->
 
 </Project>
