--- a/ExternalMerlin.XUnit.RealDevices/ExternalMerlin.XUnit.RealDevices.csproj
+++ b/ExternalMerlin.XUnit.RealDevices/ExternalMerlin.XUnit.RealDevices.csproj
@@ -11,12 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <!--<PackageReference Include="Meziantou.Xunit.ParallelTestFramework" Version="2.2.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.1">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
-    </PackageReference>-->
+    </PackageReference>
     <PackageReference Include="Saucery.XUnit" Version="4.5.1" />
   </ItemGroup>
 
