--- a/ExternalMerlin.XUnit/ExternalMerlin.XUnit.csproj
+++ b/ExternalMerlin.XUnit/ExternalMerlin.XUnit.csproj
@@ -6,12 +6,11 @@
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
 	  <IsTestProject>true</IsTestProject>
-    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <!--<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>-->
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
 
   <ItemGroup>
-    <!--<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />-->
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.1">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
