--- a/Sandbox.TUnit/Sandbox.TUnit.csproj
+++ b/Sandbox.TUnit/Sandbox.TUnit.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" Version="17.12.6" />
     <PackageReference Include="TUnit" Version="0.4.14" />
   </ItemGroup>
 
