--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -295,6 +295,41 @@ jobs:
     - name: Run External NUnit Integration Tests
       run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_NUNIT_PROJECT }}
 
+  tunit-integration-tests:
+    runs-on: ubuntu-latest
+    needs: [xunit-external-tests,
+            nunit-external-tests,
+            xunit-real-external-tests,
+            nunit-real-external-tests]
+
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v4
+      with:
+        # Check for latest at link at .NET 9 download page (https://dotnet.microsoft.com/download/dotnet/8.0)
+        dotnet-version: 9.0.x
+    
+    - name: Compile solution
+      run: dotnet build -c ${{ env.CONFIG }}
+
+    - name: Run XUnit Integration Tests
+      uses: b3b00/coverlet-action@11.9
+      with:
+        testProject: ${{ env.M_TUNIT_PROJECT }}
+        output: ${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}
+        outputFormat: ${{ env.COVERAGE_FORMAT }}
+        #threshold: ${{ env.COVERAGE_THRESHOLD }}
+        excludes: '[Merlin.TUnit]Tests.*'
+
+    - name: Publish Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: tunit-integration-test-results
+        path: ${{ env.TUNIT_INT_DIR }}/${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}
+
   generate-report:
     runs-on: ubuntu-latest
     needs: [build, 
@@ -305,7 +340,8 @@ jobs:
             nunit-external-tests,
             xunit-external-tests, 
             nunit-real-external-tests,
-            xunit-real-external-tests]
+            xunit-real-external-tests,
+            tunit-integration-tests]
     
     steps:
     - name: Checkout Code
