--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -381,7 +381,13 @@ jobs:
     - name: ReportGenerator
       uses: danielpalme/ReportGenerator-GitHub-Action@5.4.1
       with:
-        reports: ${{ env.UNIT_COVERAGE_FILENAME }};${{ env.NUNIT_INTEGRATION_COVERAGE_FILENAME }};${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }};${{ env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME }};${{ env.NUNIT_RD_INTEGRATION_COVERAGE_FILENAME }} # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
+        # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
+        reports: ${{ env.UNIT_COVERAGE_FILENAME }};
+                 ${{ env.NUNIT_INTEGRATION_COVERAGE_FILENAME }};
+                 ${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }};
+                 ${{ env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME }};
+                 ${{ env.NUNIT_RD_INTEGRATION_COVERAGE_FILENAME }};
+                 ${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}
         targetdir: 'coveragereport' # REQUIRED # The directory where the generated report should be saved.
         reporttypes: 'HtmlInline;Cobertura' # The output formats and scope (separated by semicolon) Values: Badges, Clover, Cobertura, CsvSummary, Html, HtmlChart, HtmlInline, HtmlInline_AzurePipelines, HtmlInline_AzurePipelines_Dark, HtmlSummary, JsonSummary, Latex, LatexSummary, lcov, MarkdownSummary, MHtml, PngChart, SonarQube, TeamCitySummary, TextSummary, Xml, XmlSummary
 
