--- a/Saucery.TUnit/Saucery.TUnit.csproj
+++ b/Saucery.TUnit/Saucery.TUnit.csproj
@@ -10,8 +10,8 @@
 
   <PropertyGroup>
 	<IsPackable>true</IsPackable>
-	<PackageId>Saucery.tUnit</PackageId>
-	<PackageVersion>4.5.7</PackageVersion>
+	<PackageId>Saucery.TUnit</PackageId>
+	<PackageVersion>0.5.6</PackageVersion>
 	<PackageReadmeFile>README.md</PackageReadmeFile>
 	<Authors>Andrew Gray</Authors>
 	<Company>SauceForge</Company>
@@ -23,7 +23,7 @@
 		- Initial Release with dependency on Saucery.Core
 	</PackageReleaseNotes>
 	<PackageProjectUrl>https://github.com/Sauceforge/Saucery</PackageProjectUrl>
-	<PackageIcon>Saucery.tUnit.128x128.png</PackageIcon>
+	<PackageIcon>Saucery.TUnit.128x128.png</PackageIcon>
 	<PackageTags>tunit saucelabs test testing tdd framework assert</PackageTags>
 	<Title>Sorcery for SauceLabs and TUnit</Title>
   </PropertyGroup>
@@ -31,8 +31,8 @@
   <ItemGroup>
     <PackageReference Include="TUnit" Version="0.5.6" />
     <PackageReference Include="TUnit.Core" Version="0.5.6" />
-    <!--<None Include="Images\Saucery.TUnit.128x128.png" Pack="true" PackagePath="\" />-->
-    <!--<None Include="..\README.md" Pack="true" PackagePath="\" />-->
+    <None Include="Images\Saucery.TUnit.128x128.png" Pack="true" PackagePath="\" />
+    <None Include="..\README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <ItemGroup>
